# lyra

./: .env.example  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yaml
.github/workflows/: ci.yml  release-phase.yml  release.yml
assets/: lyra.pdn
libs/spotify-parser/: Cargo.toml
libs/spotify-parser/src/: error.rs  lib.rs  parser.rs  retriever.rs
scripts/: cross-build.sh  launch.sh
src/: commands.rs  http.rs  main.rs
src/commands/: embeds.rs  kashi.rs  misc.rs  mod.rs  music.rs  tools.rs
src/commands/kashi/: kashi.rs  mod.rs
src/commands/music/: deafen.rs  join.rs  leave.rs  loopcurrent.rs  misc.rs  mod.rs  mute.rs  pause.rs  play.rs  queue.rs  repeat.rs  resume.rs  seek.rs  shuffle.rs  skip.rs  soundboard.rs  stop.rs  undeafen.rs  unmute.rs  volume.rs
src/commands/music/soundboard/: effect.rs  stream.rs
src/commands/tools/: ai.rs  dice.rs  dictionary.rs  help.rs  ip.rs  metar.rs  owoify.rs  ping.rs  posix.rs  qr.rs  register.rs  taf.rs  uptime.rs  verse.rs  weather.rs
