[package]
name = "lyra"
version = "0.2.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
openssl = { version = "0.10.63", features = ["vendored"] }
regex = "1.10.3"
reqwest = "0.11.23"
serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework", "voice"] }
songbird = { version = "0.4.0", features = ["builtin-queue", "serenity"] }
symphonia = "0.5.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
