[package]
name = "lyra"
version = "0.10.0"
authors = ["Michał Czyż <mike@c2yz.com>"]
edition = "2021"
description = "A featureful Discord bot written in Rust."
documentation = "https://github.com/eRgo35/lyra"
readme = "README.md"
homepage = "https://lyra.c2yz.com"
license-file = "LICENSE.md"
keywords = ["discord", "bot", "rust", "music", "featureful"]

[dependencies]
lib-spotify-parser = { path = "./libs/spotify-parser" }
dotenv = "0.15.0"
json = "0.12.4"
openssl = { version = "0.10.66", features = ["vendored"] }
owoify = "0.1.5"
poise = { default-features = true, version = "0.6.1" }
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
songbird = { version = "0.4.3", default-features = true, features = [
    "builtin-queue",
] }
serenity = { default-features = true, features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
    "rustls_backend",
], version = "0.12" }
symphonia = { version = "0.5.4", features = [
    "aac",
    "adpcm",
    "alac",
    "flac",
    "mpa",
    "isomp4",
] }
tokio = { version = "1.39.2", features = ["macros", "full", "signal"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
url = "2.5.2"
once_cell = "1.19.0"

[patch.crates-io.serenity-voice-model]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
